made some path changes

--- a/index.html
+++ b/index.html
@@ -37,25 +37,25 @@
     <div class="images">
         <div class="column">
             <div class="card">
-                <img id="image" src="pictures/AllentownArtMuseum_Gallery01_DiscoverLehighValley_2450c76f-4de5-402c-a060-d0a8ff3b1d37.jpg" alt="...">
+                <img id="image" src="./pictures/AllentownArtMuseum_Gallery01_DiscoverLehighValley_2450c76f-4de5-402c-a060-d0a8ff3b1d37.jpg" alt="...">
             </div>
         </div>
 
         <div class="column">
             <div class="card">
-                <img id="image" src="pictures/image.jpg" alt="...">
+                <img id="image" src="./pictures/image.jpg" alt="...">
             </div>
         </div>
 
         <div class="column">
             <div class="card">
-                <img id="image" src="pictures/Picture20(wide20photo20Gardner.20Museum.jpg" alt="...">
+                <img id="image" src="./pictures/Picture20(wide20photo20Gardner.20Museum.jpg" alt="...">
             </div>
         </div>
         
         <div class="column">
             <div class="card">
-                <img id="image" src="pictures/View-of-Self-Portrait-at-the-age-of-about-forty-by-Joseph-Wright-of-Derby-in-the-Joseph-Wright-Gallery-at-Derby-Museum-and-Art-Gallery.-Image-c-Oliver-Taylor-Derby-Museums-1.jpg" alt="...">
+                <img id="image" src="./pictures/View-of-Self-Portrait-at-the-age-of-about-forty-by-Joseph-Wright-of-Derby-in-the-Joseph-Wright-Gallery-at-Derby-Museum-and-Art-Gallery.-Image-c-Oliver-Taylor-Derby-Museums-1.jpg" alt="...">
             </div>
         </div>
     </div>
