--- a/visitUs.html
+++ b/visitUs.html
@@ -109,7 +109,7 @@
     </form>
 
     <!-- this links the local javascript file -->
-    <script src="./scripts/script.js"></script>
+    <script src="/scripts/script.js"></script>
     <!-- this links the javascript from bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
